Add more enum values to record status of the data reduction proxy QUIC usage and warmup URL fetching.

Also, enable fetching of the warmup URL even if usage of QUIC proxies
is disabled.

Bug: 780117
Change-Id: I06706aed704701ca6f85553913b8cc94eb4a7afe
Reviewed-on: https://chromium-review.googlesource.com/747131
Reviewed-by: Ryan Sturm <ryansturm@chromium.org>
Commit-Queue: Tarun Bansal <tbansal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#513085}
Former-commit-id: 09f9fdb847c34a540f93d9e588ea47c2aed7ac75